--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 	<div id="Caption">
       <div class="menuBar"> <br>
             <ul>
-              <li><a href="index.html">Home</a></li>
+              <li><a href="">Home</a></li>
               <li id="menuFeel"><a href="#">movies</a></li>
               <li><a href="#">Series</a></li>
-              <li><a href="">About Us</a></li>
-              <li><a href="#" target="_blank">Help</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Help</a></li>
             </ul>
           </div>
 
     </div>
-    <div id="titleCont"><span id="bigTitle">Latest Popular Movies</span></div>
+    <div id="titleCont"><span id="bigTitle">Latest Popular Movies</span></div><br>
     <button id="btnExplore">Explore</button>
 	</div>
  
