--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<div id="header">
 		
         <video autoplay preload="auto" loop muted class="video">
-			<source src="videoMix.mp4" type="video/mp4">
+			<source src="Movies/videoMix.mp4" type="video/mp4">
 		</video>
 
 	</div>
